sign up - login

--- a/src/layout/header/_header.html
+++ b/src/layout/header/_header.html
@@ -36,6 +36,13 @@
         </a>
       </li>
       <li>
+        <a ng-bind="header.pages.profile"
+           class="page-link"
+           ui-sref-active="active-page"
+           ui-sref="app.profile">
+        </a>
+      </li>
+      <li>
         <a ng-bind="'Log out'"
            class="page-link"
            ui-sref-active="active-page"
