--- a/src/components/greet/_greet.html
+++ b/src/components/greet/_greet.html
@@ -1,22 +1,5 @@
-<div id="greet-box" ng-if="greet.user">
+<div id="greet-box">
 
   <h2>Welcome {{greet.user.username}}!</h2>
 
-  <article class="col-md-6" >
-
-  </article>
-
-  <article class="col-md-6">
-
-    <div class="user-info-item">
-      <h4>Name</h4>
-      <span ng-bind="greet.user.username"></span>
-    </div>
-
-    <div class="user-info-item">
-      <h4>Email</h4>
-      <span ng-bind="greet.user.email"></span>
-    </div>
-
-  </article>
 </div>
